--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,16 @@
     <groupId>MCR-Projet</groupId>
     <artifactId>MCR-Projet</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
